fixed some bugs

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                                       </li> 
                             <li class="nav-item hide">
                                     <span class="social-media">
-                                           <a href="#" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
+                                           <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-facebook ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-twitter ml-3"></i></a>
                                     </span>
@@ -47,12 +47,13 @@
                             </ul>
                         </div>
                         <span class="nav-link navbar-text social-media">
-                                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </span>
                     </div>
                     </nav>
+        </header>
                     <div class="container-fluid container4 py-3 fixed-attachment"  style="background-image: url('backgroundimage.jpeg');">
                             <div class="container6">
                                 <div class="container7">
@@ -92,13 +93,13 @@
                                          <p class="story">Call or e-mail us about your online marketing needs.</p>
                                          <div class="story">
                                             <p> <span class="icon"></span><a class="mail" href="tel:+0000-0000-000">0000-0000-000</a> </p>
-                                            <p> <span class="icon"></span><a class="mail" href="mailto:#">youremail@email.com</a> </p>
+                                            <p> <span class="icon"></span><a class="mail" href="mailto:acemedia21@gmail.com">acemedia21@gmail.com</a> </p>
                                          </div>
                                          <h6 class="story">Connect with us</h6>
                                          <div class="social-media">
                                              <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-twitter"></i></a></span>        
                                              <span class="twitter"><a href="#" class="nav-link"><i class="fab fa-facebook"></i></a></span>
-                                             <span class="insta"><a href="#" class="nav-link"><i class="fab fa-instagram "></i></a></span>
+                                             <span class="insta"><a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram "></i></a></span>
                                          </div>
                                      </aside>
                                  </div>
@@ -106,16 +107,15 @@
                              </div>
                             </div>
                         </div>
-                    <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button>
+                        <!-- <button onclick="topFunction()" id="myBtn" title="Back to top"><i class="fas fa-sort-up"></i></button> -->
                     <footer class="container-fluid blockquote-footer text-center">
                     © 2020 All rights reserved. Powered By ACE MEDIA
                     </footer>
-                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
                     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
                     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
                     <script src="https://kit.fontawesome.com/a076d05399.js"></script>
                     <script src="WOW-master/dist/wow.min.js"></script>
+                    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
                     <script src="app.js"></script>
-    </header>
 </body>
 </html>
