--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </li> 
                             <li class="nav-item hide">
                                     <span class="social-media">
-                                           <a href="#" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
+                                           <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-facebook ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-twitter ml-3"></i></a>
                                     </span>
@@ -48,7 +48,7 @@
                             </ul>
                         </div>
                         <span class="nav-link navbar-text social-media">
-                                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </span>
@@ -57,7 +57,7 @@
 
     </header>
    <div style="background-color: RGB(136, 193, 247);">
-    <section class="text-center container-fluid container4" id="home" >
+    <section class="text-center container-fluid " id="home" >
       <article id="carouselExampleSlidesOnly" class="carousel  slide" data-ride="carousel" data-interval="3000">
           <main class="carousel-inner ">
             <div class="carousel-item active carousel-height">
@@ -113,14 +113,6 @@
       </menu>
       </section>
    </div>
-   <!-- <div>
-    <i class="fas fa-link"></i>
-    <i class="fas fa-video"></i>
-    <i class="fas fa-users"></i>
-    <i class="fas fa-certificate"></i>
-    <i class="fas fa-envelope"></i>
-    <i class="fas fa-phone-alt"></i>
-   </div> -->
   <div class="container" id="here">
         <div class="row">
                 <div class="col-sm-6 align-self-center wow fadeInLeftBig animate__delay-2s" >
@@ -140,11 +132,9 @@
                             <img src="2796375-1.png" alt="growing">
                     </div>
                     <div class="col-sm-6 align-self-center" id="here">
-                          <h2 class="text-center text-primary">Our Achievements Over The Years</h2>
+                          <h2 class="text-center text-primary">WHY CHOOSE ACE MEDIA</h2>
                           <p class="story">
-                              Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
-                              Perspiciatis eaque consectetur voluptas fuga ex reiciendis quos natus asperiores,
-                               culpa expedita! Qui voluptatum nihil non alias molestias, quasi harum enim aperiam?
+                            Over time we have helped our clients get to a lager audience and built trust with these clients as a result of our will to surpass our clients expectation and total commitment.
                           </p>
                     </div>
                 </div>
