--- a/review.html
+++ b/review.html
@@ -39,7 +39,7 @@
                             </li> 
                             <li class="nav-item hide">
                                     <span class="social-media">
-                                           <a href="#" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
+                                           <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-facebook ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-twitter ml-3"></i></a>
                                     </span>
@@ -47,7 +47,7 @@
                             </ul>
                         </div>
                         <span class="nav-link navbar-text social-media">
-                                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </span>
