--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
         <header>
                 <nav class="navbar fixed-top navbar-expand-md navbar-transparant animated fadeIn navbar-dark bg-dark">
                         <div class="container-fluid">
-                        <a href="index.html" class="logo pr-4"><img src="02.png" alt="brand-logo" class="brand-logo"></a>
+                        <a href="index.html" class="logo pr-4"></a><img src="02.png" alt="brand-logo" class="brand-logo"></a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                           <span class="navbar-toggler-icon"></span>
                         </button>
@@ -39,7 +39,7 @@
                             </li> 
                             <li class="nav-item hide">
                                     <span class="social-media">
-                                           <a href="#" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
+                                           <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-facebook ml-3"></i></a>
                                             <a href="#" class="nav-link"><i class="fab fa-twitter ml-3"></i></a>
                                     </span>
@@ -47,7 +47,7 @@
                             </ul>
                         </div>
                         <span class="nav-link navbar-text social-media">
-                                <a href="#" class="nav-link"><i class="fab fa-instagram"></i></a>
+                                <a href="https://www.instagram.com/acemedianow/?hl=en" class="nav-link"><i class="fab fa-instagram"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-facebook"></i></a>
                                 <a href="#" class="nav-link"><i class="fab fa-twitter"></i></a>
                         </span>
@@ -100,30 +100,30 @@
                                             <h3 class="font-weight-bolder">
                                                 Customer -Brand Interaction
                                             </h3>
-                                            <p class="story">
+                                            <!-- <p class="story">
                                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
                                                 exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                                            </p>
+                                            </p> -->
                                         </aside>
                                         <section class="col-sm-4 align-self-center">
                                             <div class="brand-image"><img src="75.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                 We influence
                                             </h3>
-                                            <p class="story">
+                                            <!-- <p class="story">
                                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
                                                 exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                                            </p>
+                                            </p> -->
                                         </section>
                                         <aside class="col-sm-4 align-self-center">
                                             <div class="brand-image"><img src="76.png" alt=""></div>
                                             <h3 class="font-weight-bolder">
                                                We promote
                                             </h3>
-                                            <p class="story">
+                                            <!-- <p class="story">
                                                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Libero, deserunt omnis qui dolores voluptatum aliquam. Repellendus totam neque atque dolor, 
                                                 exercitationem nulla assumenda veritatis placeat, sed amet earum sint vel!
-                                            </p>
+                                            </p> -->
                                         </aside>
                                     </div>
                                 </div>
